tests/NormalTests/paczka1/fuzzy1/86729211.err
Error in line 12: 4Wv0r A60 49,1
Error in line 15: H2HZG A60 84,6
Error in line 33: M0eo A6M9 9,8
Error in line 19: A679 A679 2,4
Error in line 34: M0eo A679 14,8
